[package]
name = "ai_image_captioner"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
dotenv = "0.15"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }






